3.5.1/_sources/gallery/mplot3d/contour3d.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/mplot3d/contour3d.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_mplot3d_contour3d.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_mplot3d_contour3d.py:


==================================================
Demonstrates plotting contour (level) curves in 3D
==================================================

This is like a contour plot in 2D except that the ``f(x, y)=c`` curve is
plotted on the plane ``z=c``.

.. GENERATED FROM PYTHON SOURCE LINES 9-20



.. image-sg:: /gallery/mplot3d/images/sphx_glr_contour3d_001.png
   :alt: contour3d
   :srcset: /gallery/mplot3d/images/sphx_glr_contour3d_001.png, /gallery/mplot3d/images/sphx_glr_contour3d_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default


    from mpl_toolkits.mplot3d import axes3d
    import matplotlib.pyplot as plt
    from matplotlib import cm

    ax = plt.figure().add_subplot(projection='3d')
    X, Y, Z = axes3d.get_test_data(0.05)

    ax.contour(X, Y, Z, cmap=cm.coolwarm)  # Plot contour curves

    plt.show()


.. _sphx_glr_download_gallery_mplot3d_contour3d.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: contour3d.py <contour3d.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: contour3d.ipynb <contour3d.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
