3.10.5/_sources/gallery/mplot3d/contour3d.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/mplot3d/contour3d.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_mplot3d_contour3d.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_mplot3d_contour3d.py:


=================================
Plot contour (level) curves in 3D
=================================

This is like a contour plot in 2D except that the ``f(x, y)=c`` curve is
plotted on the plane ``z=c``.

.. GENERATED FROM PYTHON SOURCE LINES 9-22

.. code-block:: Python


    import matplotlib.pyplot as plt

    from matplotlib import cm
    from mpl_toolkits.mplot3d import axes3d

    ax = plt.figure().add_subplot(projection='3d')
    X, Y, Z = axes3d.get_test_data(0.05)

    ax.contour(X, Y, Z, cmap=cm.coolwarm)  # Plot contour curves

    plt.show()




.. image-sg:: /gallery/mplot3d/images/sphx_glr_contour3d_001.png
   :alt: contour3d
   :srcset: /gallery/mplot3d/images/sphx_glr_contour3d_001.png, /gallery/mplot3d/images/sphx_glr_contour3d_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 23-26

.. tags::
   plot-type: 3D,
   level: beginner


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.295 seconds)


.. _sphx_glr_download_gallery_mplot3d_contour3d.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: contour3d.ipynb <contour3d.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: contour3d.py <contour3d.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: contour3d.zip <contour3d.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
